--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
-<<<<<<< HEAD
-hello world ##
-=======
 <!doctype html>
 <html lang="en">
 
@@ -16,7 +13,7 @@ hello world ##
     </script>
     <link rel="stylesheet" href="assets/css/style.css">
 
-    <title>Sample Landing Page</title>
+    <title>SIEKE-NET | Musterseite</title>
 </head>
 
 <body id="body" data-spy="scroll" data-target=".navbar" data-offset="0">
@@ -120,7 +117,7 @@ hello world ##
                             </svg>
                         </div>
                         <div class="card-body">
-                            <h3 class="card-title">Fürsorge</h3>
+                            <h3 class="card-title">Ich hab Dich lieb</h3>
                             <p class="card-text">
                                 Quidem repellendus adipisci vitae beatae obcaecati nesciunt ullam itaque maxime soluta atque excepturi, tenetur recusandae inventore voluptatibus sint omnis iusto, officiis reiciendis vero? Deleniti nam tempore nihil eius amet vitae!
                             </p>
@@ -346,7 +343,7 @@ hello world ##
         <footer class="footer">
             <div class="container load-hidden">
                 <div class="copyright">
-                    <span>© 2018 | Alle Rechte vorbehalten | Webseite gestaltet und betrieben von <a href="https://www.sieke-net.com">Sieke-NET.com</a></span>
+                    <span>© 2018 | Alle Rechte vorbehalten | Webseite gestaltet und betrieben von <a href="https://www.sieke-net.com">SIEKE-NET.COM</a></span>
                 </div>
             </div>
         </footer>
@@ -363,4 +360,3 @@ hello world ##
 </body>
 
 </html>
->>>>>>> 7944cecb2f1615ee1fd56d912fe24fbe1ba56220
