Adding map images, updating assets.

--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
     <script src="assets/js/vendor/svg4everybody.min.js"></script>
     <script src="assets/js/vendor/leaflet.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.min.js"></script>
-    <script src="assets/js/script.js"></script>
+    <script src="assets/js/app.js"></script>
 </body>
 
 </html>
